@@ -5,13 +5,10 @@ trove.jar=lib/trove.jar
 occjava.jar=lib/occjava.jar
 
 # http://jcae.sourceforge.net/
-jcae.jar=lib/jcae.jar
+jcae.jar=lib/amibe.jar
 
 # http://jcae.sourceforge.net/
 jcae-viewer3d.jar=lib/jcae-viewer3d.jar
-
-# http://logging.apache.org/log4j/docs/
-log4j.jar=lib/log4j.jar
 
 # for j2se 5.0
 #compiler.arg=-Xlint -target 1.4 -source 1.4
