@@ -14,7 +14,6 @@
 			<classpath>
 				<pathelement location="${jcae.jar}"/>
 				<pathelement location="${jcae-viewer3d.jar}"/>
-				<pathelement location="${log4j.jar}"/>
 				<pathelement location="${trove.jar}"/>
 			</classpath>
 		</javac>
@@ -69,7 +68,6 @@
 			<zipfileset prefix="${project.name}-${version}/api" dir="doc/api"/>
 			<zipfileset prefix="${project.name}-${version}" file="${jar.dir}/${jcae-viewer3d-amibe.jar}"/>
 			<zipfileset prefix="${project.name}-${version}" file="${jcae.jar}"/>
-			<zipfileset prefix="${project.name}-${version}" file="${log4j.jar}"/>
 			<zipfileset prefix="${project.name}-${version}" file="${trove.jar}"/>
 		</zip>
 	</target>
